添加发送事件准备工作

--- a/canvasBarrage/index.html
+++ b/canvasBarrage/index.html
@@ -43,7 +43,8 @@
   const initData = [
     {
       color: 'red',
-      fontSize: '48px serif',
+      size: 68,
+      font: 'serif',
       opacity: 1,
       time: 0,
       speed: 0,
@@ -51,7 +52,8 @@
     },
     {
       color: 'red',
-      fontSize: '48px serif',
+      size: 68,
+      font: 'serif',
       opacity: 1,
       time: 0,
       speed: 0,
@@ -60,7 +62,8 @@
     },
     {
       color: 'green',
-      fontSize: '58px serif',
+      size: 68,
+      font: 'serif',
       opacity: 1,
       time: 0,
       speed: 0,
@@ -69,7 +72,8 @@
     },
     {
       color: 'blue',
-      fontSize: '68px serif',
+      size: 68,
+      font: 'serif',
       opacity: 1,
       time: 0,
       speed: 0,
